...
    android:layout_width="400dip">

    <item>
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_info"
                    android:icon="@mipmap/info"
                    android:title="Information" />
                <item
                    android:id="@+id/activity_main_drawer_schedule"
                    android:icon="@mipmap/schedule"
                    android:title="Schedule" />
                <item
                    android:id="@+id/activity_main_drawer_poi"
                    android:icon="@mipmap/point_of_interest"
                    android:title="Points of Interest" />
...
