<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/blek_main_root"
    tools:openDrawer="start"
    tools:context="ch.epfl.balelecbud.WelcomeActivity">
...

        </FrameLayout>
    </LinearLayout>

    <!-- 2 | NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/root_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/blek_blue"
        app:headerLayout="@layout/root_activity_nav_header"
...
