<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule_activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blek_blue"
    android:fitsSystemWindows="true"
    tools:context="ch.epfl.balelecbud.ScheduleActivity"
    tools:openDrawer="start">
...


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/schedule_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blek_blue"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/root_activity_nav_header"
...
