...
    <string name="schedule_view">Schedule</string>
    <string name="point_of_interest">Points of interest</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="concert_soon_channel_name">Concert Soon Channel</string>
    <string name="concert_soon_notification_title">A concert is starting soon</string>
    <string name="concert_soon_channel_description">A channel to convey information about concerts starting soon</string>

    <string name="pic_uploaded_message">Your picture was uploaded to the photos wall!</string>

    <!--  APP DRAWER  -->

...
        <!--   TAB NAMES -->
        <string name="tab_friends">Friends</string>
        <string name="tab_received_requests">Received requests</string>
        <string name="tab_sent_requests">Sent requests</string>

        <!-- DIALOG   -->
        <string name="add_friend_title">Add a friend</string>
        <string name="add_friend_request">Request</string>
        <string name="cancel">Cancel</string>
        <string name="add_friend_email_hint">Enter your friend\'s email</string>
        <string name="add_own_as_friend">You can\'t add yourself as a friend :-)</string>
        <string name="add_friend_request_sent">Friend request sent to \</string>

        <!--  FRIEND ITEM  -->
...
    <string name="location_info_key">LOCATION_INFO_KEY"</string>
    <string name="location_info_title">Location usage is not allowed</string>
    <string name="location_info_summary">Click here to allow it</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_in_key">LOGIN_INFO_KEY</string>
    <string name="not_sign_in">You are not signed in</string>
    <string name="click_to_sign_in">Click here to sign in</string>
    <string name="sign_out_key">SIGN_OUT</string>
    <string name="sign_out_text">Sign out</string>
    <string name="register">Register</string>
    <string name="connection_key">CONNECTING</string>
    <string name="connecting">Connecting …</string>
    <string name="sign_in_failed">Sign in failed ! Check your email and password</string>
    <string name="register_failed">Register failed ! This email is already used</string>

    <string name="delete_account">Delete account</string>
    <string name="delete_user_key">DELETE_USER_KEY</string>
    <string name="delete_account_text">Are you sure you want to delete your account ? This action is irreversible</string>
    <string name="delete_account_yes">Yes</string>


    <!--  EMERGENCIES  -->

    <string name="emergency_ask_for_help">Ask for help</string>
    <string name="you_can_report_an_emergency_here">You can report an emergency here :</string>
...
